* Made separate collection feature optional
	<https://trac.clarin.eu/ticket/558>
* Fixed empty record page title issue
	<https://trac.clarin.eu/ticket/556>
* Improved compatibility with old bookmarks
	<https://trac.clarin.eu/ticket/557>
* Removed mapping for http://purl.org/dc/terms/language datacategory
	see <https://trac.clarin.eu/ticket/554>
* Styling of CMDI to HTML transormation output

VLO 3.0-beta3 (May 2014)
* Added paging to the 'all facet values' list
	<https://trac.clarin.eu/ticket/543>
* Removed duplicate VloConfig.xml in distribution
* Add 'busy' indicators to a number of AJAX action links
* Hidden previous/next links on record page if result set has only one record
* Added a search icon to the facet filter box
* Fixed sometimes chaotic layout of collection facet items
* Permalink link is now a button (to prevent right click/copy url)
* Migrated from CSS to LESS (converted to compressed CSS compile time)

VLO 3.0-beta2 (May 2014)
* Added the "_selfLink" field to fix FCS aggregator connection
	<https://trac.clarin.eu/ticket/542>
* Removed simple search selection ‘leave this page’ dialogue
* Included record name in page title for record pages

VLO 3.0-beta (April 2014)
* Added a 'simple search' front page
* Added expansion of search results items to see more details
* Added federated content search support
* Added links to 'search pages' if provided by a record
* Added an 'About' page
* Added links to help and error report form
* Added support for themes, included a CLARIN-D theme 
	(enabled by query parameter theme=clarin-d)
* Added a filter or 'quick search' input to facet selection panels
* Added filtering on minimal number of occurrences in all facet values popup/page
* Added an advanced search options box with the option to filter on FCS option
* Added resolving of handles of resources to show the actual filename
* Added support for UBN:NBN
* Added a link to the CLARIN language info page for language values of records