@@ -23,7 +23,10 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
     </head>
     <body>
         <wicket:panel>
-            <a wicket:id="mainpage">VLO</a>
+            <wicket:link>
+                <a href="SimpleSearchPage.html">VLO</a>
+            </wicket:link>
+            &gt; <a wicket:id="searchPage">Faceted search</a>
             <wicket:container wicket:id="query">
                 &gt; <a wicket:id="leavequery">Search: &quot;<span wicket:id="content"></span>&quot;</a>
             </wicket:container>
