@@ -215,13 +215,13 @@ ol li
 
 .sbilinks li
 { list-style: none; 
-  padding: 0px 0px 0px 0px;
+  padding: 0px 0px 0px 14px;
   margin: 0px 0px 5px 0px;
 }
 
 .sbilinks li a, .sbilinks li a:hover
 { 
-    padding: 0px 0px 2px 14px;
+    padding: 0px 0px 2px 0px;
     height: 16px;
     text-decoration: none; 
     width: 149px;
