@@ -65,8 +65,7 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 
 .facetvalues li
 { list-style: none; 
-  padding: 0px 0px 0px 0px;
-  margin: 0px 0px 5px 0px;
+  margin: 7px 0px 7px 0px;
 }
 
 .facetvalues li a, .facetvalues li a:hover
@@ -80,7 +79,6 @@ along with this program.  If not, see <http://www.gnu.org/licenses/>.
 }
 
 .facetvalue, .selectedfacetvalue {
-    padding: 0px 0px 2px 14px;
     font-weight: bold;
 }
 
